# HavenFall

./: PATCH_NOTES_MENU.md  PATCH_NOTES_V1.8.md  PATCH_NOTES_V1.9BC.md  PATCH_NOTES_V1.9D.md  PATCH_NOTES_V1.9F.md  PATCH_NOTES_V1.9G.md  README.md  README_APLICAR.md  animal-preview.html  apply-phaser-v1.cjs  create-icon.ps1  electron-main.cjs  electron-preload.cjs  index.html  package-lock.json  package.json  server.js  tsconfig.json
assets/: audit-raw-assets.cjs  manifest.js  manifest.json
docs/: ASSETS_ALPHA_1_0B.md  ASSET_RAW_AUDIT.md  CHANGELOG.md  LIVING_WORLD_ROADMAP.md  MINING_AUTOMATION_ASSET_ROADMAP.md  MINING_AUTOMATION_ROADMAP.md  MULTIPLAYER_E_CONTROLE.md  PATCH_NOTES_V1.9A.md  PATCH_NOTES_V1.9E.md  PATCH_NOTES_V1.9F.md  RoadMap - Mapa mundo.md  RoadMap - Sistema de pontos spawnaveis no globo.md  Roadmap multiplayer.md  Roadmap — Sistema Universal de Inspeção ou Seleção de Entidades.md  Roadmap — Sono, IA, Mobs, Telhado e Iluminação.md  WORK_ANIMATIONS_AUDIO_ROADMAP.md  WORLDGEN_ROADMAP.md
scripts/: build-web.mjs  desktop-doctor.cjs  generate-mining-roadmap-assets.mjs  prepare-icons.cjs  process-assets.mjs
site para download/: README.md  index.html  script.js  styles.css
src/: game.js  hud_footer.css  pregame-cinematic.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  paths.rs
tests/: animal-renderer.test.mjs  build-preview.test.mjs  canvas-input-building.test.mjs  game-setup.test.mjs  game-systems.test.mjs  lighting-system.test.mjs  mining-regressions.test.mjs  (+6 more)
(+250 files in other folders)
